test/invalid-syntax/56307_missingColon/missingColon.agu
-- Author: 56037, Denis Ungureanu, Syntax Test 1
let missingColon (x) Int -> Bool = x == 0